[gd_scene load_steps=20 format=3 uid="uid://dypovwakhdvh8"]

[ext_resource type="Script" uid="uid://dw420o3v2u8v1" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dsg2w2pxbtxpj" path="res://Chicken.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c0tovyanvd67e" path="res://assets/Ground/cobblestone_ground_-_highpoly.glb" id="3_3dxm6"]
[ext_resource type="Theme" uid="uid://c72x3y3mcpcig" path="res://ui_theme.tres" id="4_gnyca"]
[ext_resource type="FontFile" uid="uid://wr6v0asbbmc" path="res://assets/fonts/Montserrat-Medium.ttf" id="5_trn2v"]
[ext_resource type="Script" uid="uid://bstu201ki3rdd" path="res://TimeLabel.gd" id="6"]
[ext_resource type="Script" uid="uid://dptirid8d36k1" path="res://EggSpawner.gd" id="6_3dxm6"]
[ext_resource type="AudioStream" uid="uid://c6fnq8rin7cjb" path="res://assets/Music/game-over-417465.mp3" id="9_03owx"]
[ext_resource type="AudioStream" uid="uid://c0cpbg635sdmb" path="res://assets/Music/roblox-minecraft-fortnite-video-game-music-358426.mp3" id="9_wkp8b"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(80.19556, 2, 77.26184)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_i5n5q"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_m3njk"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_yutuu"]
sky_material = SubResource("ProceduralSkyMaterial_m3njk")

[sub_resource type="Environment" id="Environment_0tcge"]
background_mode = 2
sky = SubResource("Sky_yutuu")
tonemap_mode = 4

[sub_resource type="Curve3D" id="5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, -42.838203, 0, 0, 0, 0, 0, 0, -65.50098, 0, -42.146763, 0, 0, 0, 0, 0, 0, -60.731407, 0, 33.991753, 0, 0, 0, 0, 0, 0, 14, 0, 33.3398, 0, 0, 0, 0, 0, 0, 14, 0, -42.371475),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_03owx"]
default_font = ExtResource("5_trn2v")
default_font_size = 22

[sub_resource type="Theme" id="Theme_wkp8b"]
default_font = ExtResource("5_trn2v")
default_font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03owx"]
bg_color = Color(0.1764706, 0.1764706, 0.1764706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkp8b"]
bg_color = Color(0.26666668, 0.53333336, 1, 1)

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.50232, 0, -1.8324585)
shape = SubResource("1")

[node name="Sketchfab_Scene" parent="Ground" instance=ExtResource("3_3dxm6")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -4.8488607, 0)

[node name="Sketchfab_Scene2" parent="Ground" instance=ExtResource("3_3dxm6")]
transform = Transform3D(-20, 1.7484556e-06, 0, -1.7484556e-06, -20, 0, 0, 0, 20, -62.852985, 5.0422125, -0.5513096)

[node name="Walls" type="StaticBody3D" parent="."]
editor_description = "These invisible walls are used to prevent the player from escaping the playable area.

These walls use WorldBoundaryShape3D collision shapes, which are infinitely large planes
(even though they look finite in the editor)."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(5, 0, 0, 0, -2.1855695e-07, 5, 0, -5, -2.1855695e-07, -26.910965, 12.689827, 26.06504)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-2.1855695e-07, 5, 2.1855695e-07, 0, -2.1855695e-07, 5, 5, 2.1855695e-07, 9.553427e-15, -56.99521, 10, -4.7683716e-07)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(3.774895e-07, -5, 2.1855695e-07, 0, -2.1855695e-07, -5, 5, 3.774895e-07, -1.650059e-14, 10.226173, 10, -1.047173)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(5, 2.98023e-07, -1.3026998e-14, 0, -2.1855695e-07, -5, -2.98023e-07, 5, -2.1855695e-07, -24.002745, 10, -41.901356)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5000002, -0.77704847, 0.38235524, 0, 0.44150588, 0.89725834, -0.8660253, -0.44862935, 0.22075301, -20.10295, 18.704626, 3.8528786)
shadow_enabled = true
shadow_bias = 0.04
shadow_blur = 1.5
directional_shadow_mode = 0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 40.0
directional_shadow_pancake_size = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0tcge")

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0262146, 3.259978, 0)

[node name="CameraPivot" type="Marker3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.183514, -3.259978, 0)

[node name="Camera" type="Camera3D" parent="Player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.9999998, 0, 0, 0, 0.9999998, 0, 2.1213212, 16.878681)
projection = 1
fov = 48.6
size = 24.0
far = 40.0

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("5")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.0086968, 0, 0.999943, 0, 1, 0, -0.999943, 0, -0.0086968, 14, 0, -42.838203)
rotation_mode = 1
cubic_interp = false
loop = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_gnyca")

[node name="TimeLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 42.0
theme = SubResource("Theme_03owx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Time: 0"
script = ExtResource("6")

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.447059)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Press Space or Enter to retry"

[node name="EggLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 16.0
offset_top = 61.0
offset_right = 135.0
offset_bottom = 101.0
theme = SubResource("Theme_wkp8b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Eggs: 0"

[node name="StaminaBar" type="ProgressBar" parent="UserInterface"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -87.0
offset_right = 277.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_03owx")
theme_override_styles/fill = SubResource("StyleBoxFlat_wkp8b")
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 29.0
offset_top = 815.0
offset_right = 241.0
offset_bottom = 877.0
text = "Stamina"

[node name="EggSpawner" type="Node3D" parent="."]
script = ExtResource("6_3dxm6")
max_eggs = 5

[node name="Timer" type="Timer" parent="EggSpawner"]
wait_time = 3.0
autostart = true

[node name="LosePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_03owx")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wkp8b")

[node name="DeathCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202015, 0.9396926, 0, -0.9396926, 0.34202015, -30.4784, 29.226261, -13.978031)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
